--- a/.env
+++ b/.env
@@ -37,10 +37,10 @@ CI_ENVIRONMENT = development
 # DATABASE
 #--------------------------------------------------------------------
 
-# database.default.hostname = localhost
-# database.default.database = ci4
-# database.default.username = root
-# database.default.password = root
+# database.default.hostname = sql308.epizy.com
+# database.default.database = epiz_31438476_expinc
+# database.default.username = epiz_31438476
+# database.default.password = EIzv3H0PiHR
 # database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 
